--- a/client/cmake-build-debug-qt/Makefile
+++ b/client/cmake-build-debug-qt/Makefile
@@ -56,10 +56,10 @@ RM = D:\Learning\CLion\bin\cmake\win\x64\bin\cmake.exe -E rm -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = D:\Code\C\Webstockprj\Webstockprj\client
+CMAKE_SOURCE_DIR = D:\Code\C\Webstockprj\client
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = D:\Code\C\Webstockprj\Webstockprj\client\cmake-build-debug-qt
+CMAKE_BINARY_DIR = D:\Code\C\Webstockprj\client\cmake-build-debug-qt
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -131,9 +131,9 @@ install/strip/fast: preinstall/fast
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start D:\Code\C\Webstockprj\Webstockprj\client\cmake-build-debug-qt\CMakeFiles D:\Code\C\Webstockprj\Webstockprj\client\cmake-build-debug-qt\\CMakeFiles\progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start D:\Code\C\Webstockprj\client\cmake-build-debug-qt\CMakeFiles D:\Code\C\Webstockprj\client\cmake-build-debug-qt\\CMakeFiles\progress.marks
 	$(MAKE) $(MAKESILENT) -f CMakeFiles\Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start D:\Code\C\Webstockprj\Webstockprj\client\cmake-build-debug-qt\CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start D:\Code\C\Webstockprj\client\cmake-build-debug-qt\CMakeFiles 0
 .PHONY : all
 
 # The main clean target
